<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".DataGridActivity">

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="9dp"
        android:backgroundTint="@color/delete_red"
        android:text="@string/logout"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/eventListText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/event_list"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/addEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/eventListText"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/add_event"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addEventButton"
        android:layout_marginTop="20dp">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/eventTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stretchColumns="2,3">
            </TableLayout>
        </HorizontalScrollView>
    </ScrollView>

    <TextView
        android:id="@+id/instructionsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/press_an_event_for_more_details"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"/>
</RelativeLayout>
